🎳🚞 Updated with Glitch

--- a/videogames.html
+++ b/videogames.html
@@ -96,14 +96,16 @@
           </svg>
         </div>
         <div id="pic-center">
+          <a href="https://www.playstation.com/en-us/" target="-blank">
         <img
           class="PS5"
           src="https://gmedia.playstation.com/is/image/SIEPDC/ps5-family-image-block-01-en-16sep20?$1600px--t$"
-        />
+        /></a>
+          <a href="https://www.nintendo.com/" target="-blank">
         <img
           class="nintendo"
           src="https://upload.wikimedia.org/wikipedia/commons/7/76/Nintendo-Switch-Console-Docked-wJoyConRB.jpg"
-        /></div>
+        /></a></div>
         <div class="space" style="padding-top:1em">
           <svg width="22" height="22">
             <rect
