🙈😂 Updated with Glitch

--- a/videogames.html
+++ b/videogames.html
@@ -2,6 +2,17 @@
   <header>
     <title>Derrick Banks Website</title>
     <style>
+      h1{
+        font-size:45px;
+      }
+      a:hover{
+        background-color: white;
+      }
+      nav{
+        display: block;
+        text-align: center;
+        background-color: #000000;
+      }
       #pic-center {
         text-align: center;
       }
@@ -34,6 +45,36 @@
   </header>
   <body>
     <div class="dj">
+      <header>
+        <nav>
+          <ul>
+            <li>
+              <a href="https://db-webs1.glitch.me/" class="travel">My First Game</a>
+            </li>
+            <li>
+              <a
+                href="https://db-webs2-.glitch.me/videogames.html"
+                class="travel"
+                >Consoles!</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://db-website-3.glitch.me/videogames.html"
+                class="travel"
+                >Videogame Genres!</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://db-webs4.glitch.me/videogames.html"
+                class="travel"
+                >My Top Three</a
+              >
+            </li>
+          </ul>
+        </nav>
+      </header>
       <article>
         <h1 style="text-align:center" class="title">The consoles</h1>
         <div class="space" style="padding-top:1em">
