🍡⛲️ Updated with Glitch

--- a/videogames.html
+++ b/videogames.html
@@ -1,5 +1,6 @@
 <html>
-  <header>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Derrick Banks Website</title>
     <style>
       h1{
@@ -42,7 +43,7 @@
         padding: 20px;
       }
     </style>
-  </header>
+  </head>
   <body>
     <div class="dj">
       <header>
