--- a/videogames.html
+++ b/videogames.html
@@ -79,6 +79,13 @@
                 >My Top Three</a
               >
             </li>
+            <li>
+                <a
+                  href="https://db-web5.glitch.me/videogames.html"
+                  class="travel"
+                  >Now You!</a
+                >
+              </li>
           </ul>
         </nav>
       </header>
