--- a/videogames.html
+++ b/videogames.html
@@ -3,6 +3,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Derrick Banks Website</title>
     <style>
+      .title {
+        text-align: center;
+      }
       #position{
         position:relative;
       }
@@ -51,6 +54,7 @@
   <body>
     <div class="dj">
       <header>
+        <h1 class="title">My experince with videogames</h1>
         <nav>
           <ul>
             <li>
